# RESTinstance

./: .cz.toml  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.python2  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  genlibdoc  how_to_build_this_project.txt  index.html  noxfile.py  package-lock.json  package.json  pyproject.toml  pytest.ini  release  release.sh  release_docker  release_pypi  requirements-dev.txt  requirements.txt  rfdocker  run_tests  setup.cfg  setup.py  test
.circleci/: config.yml
.github/workflows/: atest.yml  build.yml  inactive.yml  python-package.yml  rf_tests.yml  test.yml  unittests.yml
atest/: auth.robot  headers.json  headers.robot  jsonpath.robot  methods.robot  output.robot  schema.robot  spec_30_yaml.robot  spec_31_json.robot  spec_31_yaml.robot  spec_32_yaml.robot  spec_json.robot  spec_yaml.robot  validations.robot
atest/payloads/: unicode.json
atest/schemagen/: body_array.json  body_object.json  request_body.json  request_query.json
atest/schemas/invalid/: response.json
atest/schemas/valid/: request.yaml  response.json
atest/swagger/: spec_20.json  spec_30.yaml  spec_31.json  spec_31.yaml  spec_32.yaml
docker/: Dockerfile  build_run_docker  tag_push_docker
docs/: REST.html  index.html
examples/: 0_hello.rst  1_http.rst  4_values.md  5_validations.md  README.rst  user_1.json
scripts/: genlibdoc  release  release_docker  release_pypi  test
src/REST/: __init__.py  compat.py  keywords.py  schema_keywords.py  version.py
test/: conftest.py  test_keywords.py  test_output.py
testapi/: apis.ejs  dcup  docker-compose.yml  mountebank
testapi/apis/: apis.ejs
testapi/apis/jsf/: get.js  post.js
testapi/apis/mocks/: delete.js  get.js  patch.js  post.js  proxy.js  put.js
testapi/docker/: Dockerfile  entrypoint
testapi/mocks/: delete.js  get.js  patch.js  post.js  put.js  state.js
testapi/responders/: delete.js  get.js  patch.js  post.js  proxy.js  put.js  state.js
tests/: __init__.robot  headers.robot  jsonpath.robot  methods.robot  output.robot  outputs.robot  proxy.json  schema.robot  schemagen.robot  schemakws.robot  spec.robot  spec_json.robot  spec_yaml.robot  unicode.robot  validations.robot
tests/outputs/: body_array.json  outputs.rst  request_body.json  request_query.json
tests/resources/: imposter.json  mounterest.robot
tests/schemagen/: body_array.json  body_object.json  request_body.json  request_query.json  schemagen.rst
tests/schemas/invalid/: response.json
tests/schemas/valid/: request.json  response.json
tests/spec/: users_api.yaml
tests/swagger/: spec_20.json  spec_20.yaml
tests/users/: __init__.robot  delete.robot  get.robot  get_all.robot  patch.robot  post.robot  put.robot  schema.robot  spec.robot  validations.json
tests/users/json/: headers.json
tests/users/openapi/: users.json
tests/users/schemas/: request.json  response.json  response_status.json  schema.json
utests/: test_import.py
