[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[check-manifest]
ignore =
  .circleci
  .circleci/*
  docs
  docs/*
  examples
  examples/*
  testapi
  testapi/*
  tests
  tests/*
  utests
  utests/*
  .coveragerc
  .flake8
  docker-compose.yml
  Dockerfile*
  Makefile
  mypy.ini
  pyproject.toml
  pytest.ini
  release_docker
  requirements-dev.txt
  rfdocker
